@@ -1,0 +1,67 @@
+/*
+  This file is part of opensearch.
+  Copyright © 2009, Dansk Bibliotekscenter a/s,
+  Tempovej 7-11, DK-2750 Ballerup, Denmark. CVR: 15149043
+
+  opensearch is free software: you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation, either version 3 of the License, or
+  (at your option) any later version.
+
+  opensearch is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with opensearch.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
+
+package dk.dbc.opensearch.common.fedora;
+
+
+import org.junit.AfterClass;
+import org.junit.Before;
+import org.junit.Test;
+import static org.junit.Assert.*;
+
+
+/**
+ *
+ */
+public class OpenSearchConditionTest
+{
+
+    @Test( expected = IllegalArgumentException.class )
+    public void testFieldIsNull()
+    {
+	OpenSearchCondition osc = new OpenSearchCondition(null, OpenSearchCondition.Operator.EQUALS, "King Kong" );
+    }
+
+    @Test( expected = IllegalArgumentException.class )
+    public void testOperatorIsNull()
+    {
+	OpenSearchCondition osc = new OpenSearchCondition(FedoraObjectFields.TITLE, null, "King Kong" );
+    }
+
+    @Test( expected = IllegalArgumentException.class )
+    public void testValueIsNull()
+    {
+	OpenSearchCondition osc = new OpenSearchCondition(FedoraObjectFields.TITLE, OpenSearchCondition.Operator.EQUALS, null );
+    }
+
+    @Test
+    public void testArgumentsAreUnchanged()
+    {
+	FedoraObjectFields field = FedoraObjectFields.CREATOR;
+	OpenSearchCondition.Operator operator = OpenSearchCondition.Operator.CONTAINS;
+	String value = "Some arbitrary value";
+
+	OpenSearchCondition osc = new OpenSearchCondition( field , operator, value );
+	
+	assertTrue( osc.getField() == field );
+	assertTrue( osc.getOperator() == operator );
+	assertTrue( osc.getValue().equals( value ) );
+    }
+}
